{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 67,
  "lineage": "4b492588-2cfe-f67c-d3d8-40b5e288b677",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "172.16.0.5",
            "association_id": "eipassoc-0c62cba89f354b114",
            "domain": "vpc",
            "id": "eipalloc-013d59de53e2dae8a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0447a5710eb1e045a",
            "private_dns": "ip-172-16-1-161.ap-south-1.compute.internal",
            "private_ip": "172.16.1.161",
            "public_dns": "ec2-13-232-255-208.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.255.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "tags_all": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:905284826522:instance/i-031d55c2d0e088dd6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031d55c2d0e088dd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m4.large",
            "ipv6_address_count": 0,
            "key_name": "terraform-testing",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00337fc660b6f4353",
            "private_dns": "ip-172-16-1-230.ap-south-1.compute.internal",
            "private_ip": "172.16.1.230",
            "public_dns": "ec2-13-234-239-102.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.239.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f746c93a68c8198",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013d9d8c21c550f84",
            "tags": {
              "Name": "Jenkins-Instance"
            },
            "tags_all": {
              "Name": "Jenkins-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0363e2d1e14b30e80"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_allow_ssh_jenkins",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minikube-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1a7f89451184c8b",
            "arn": "arn:aws:ec2:ap-south-1:905284826522:instance/i-0995c91c268b9ed54",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0995c91c268b9ed54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m4.large",
            "ipv6_address_count": 0,
            "key_name": "terraform-testing",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0093f36ea9489efe8",
            "private_dns": "ip-172-16-10-8.ap-south-1.compute.internal",
            "private_ip": "172.16.10.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019eba444ac2edb9a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbd2ccd2f40bec76",
            "tags": {
              "Name": "Minikube-Instance"
            },
            "tags_all": {
              "Name": "Minikube-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c9d97270992e002f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_minikube",
            "aws_subnet.private-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905284826522:internet-gateway/igw-0344f6683736aa9ba",
            "id": "igw-0344f6683736aa9ba",
            "owner_id": "905284826522",
            "tags": {
              "Name": "Development-IGW"
            },
            "tags_all": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-0c59a243f1116f4d0"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013d59de53e2dae8a",
            "id": "nat-019b39a9aabf87b54",
            "network_interface_id": "eni-0447a5710eb1e045a",
            "private_ip": "172.16.1.161",
            "public_ip": "13.232.255.208",
            "subnet_id": "subnet-013d9d8c21c550f84",
            "tags": {
              "Name": "Development-NATGW"
            },
            "tags_all": {
              "Name": "Development-NATGW"
            }
          },
          "dependencies": [
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "aws_eip.elastic-ip-for-nat-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0018728dd1dabd9b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019b39a9aabf87b54",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0018728dd1dabd9b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0344f6683736aa9ba",
            "id": "r-rtb-06314eb02924070be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06314eb02924070be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905284826522:route-table/rtb-0018728dd1dabd9b3",
            "id": "rtb-0018728dd1dabd9b3",
            "owner_id": "905284826522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-019b39a9aabf87b54",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "tags_all": {
              "Name": "Development-Private-RouteTable"
            },
            "vpc_id": "vpc-0c59a243f1116f4d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905284826522:route-table/rtb-06314eb02924070be",
            "id": "rtb-06314eb02924070be",
            "owner_id": "905284826522",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0344f6683736aa9ba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "tags_all": {
              "Name": "Development-Public-RouteTable"
            },
            "vpc_id": "vpc-0c59a243f1116f4d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0522625b8ec9e7948",
            "route_table_id": "rtb-0018728dd1dabd9b3",
            "subnet_id": "subnet-0cbd2ccd2f40bec76"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0402caa6b6040f6ae",
            "route_table_id": "rtb-06314eb02924070be",
            "subnet_id": "subnet-013d9d8c21c550f84"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905284826522:security-group/sg-0363e2d1e14b30e80",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0363e2d1e14b30e80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": "",
            "owner_id": "905284826522",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c59a243f1116f4d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_minikube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905284826522:security-group/sg-0c9d97270992e002f",
            "description": "Allow minikube inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9d97270992e002f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_minikube",
            "name_prefix": "",
            "owner_id": "905284826522",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c59a243f1116f4d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905284826522:subnet/subnet-0cbd2ccd2f40bec76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-0cbd2ccd2f40bec76",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905284826522",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-0c59a243f1116f4d0"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905284826522:subnet/subnet-013d9d8c21c550f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-013d9d8c21c550f84",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905284826522",
            "tags": {
              "Name": "Development-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Development-Public-Subnet-1"
            },
            "vpc_id": "vpc-0c59a243f1116f4d0"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905284826522:vpc/vpc-0c59a243f1116f4d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0fccae226fcfde56d",
            "default_route_table_id": "rtb-0027d178f3b8cba33",
            "default_security_group_id": "sg-0cf44c3f2055326a6",
            "dhcp_options_id": "dopt-9d688bf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c59a243f1116f4d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0027d178f3b8cba33",
            "owner_id": "905284826522",
            "tags": {
              "Name": "Development-VPC"
            },
            "tags_all": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}